[tool.poetry]
authors = ["alex-treebeard <alex@treebeard.io>"]
description = "Pytest plugin for testing notebooks"
homepage = "https://github.com/treebeardtech/nbmake"
license = "Apache-2.0"
name = "nbmake"
packages = [
  {include = "nbmake", from = "src"},
]
readme = "README.md"
version = "v1.5.4"

[tool.poetry.plugins."pytest11"]
nbmake = "nbmake.pytest_plugin"

[tool.poetry.dependencies]
python = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.0"
pre-commit = "^2.8.2"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.1.0"
virtualenv = "^20.1.0"
setuptools = ">65.0.0"
typing-extensions = "^4.7.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "poetry-core>=1.0.0"]
